# edm

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md  nixpacks.toml  resources.qrc
docs/: CODE_LISTINGS.md  SYNC_SERVER_PLAN.md  TEST_DESCRIPTIONS.md  architecture-diagrams.md  diploma-general-part.md  diploma-special-part.md  portal-auto-search.md  portal-auto-sync.md
docs/diagrams/: 01-system-architecture.puml  02-create-document-flowchart.puml  algorithm-approve-gradesheet.puml  algorithm-create-gradesheet.puml  algorithm-export-html.puml  algorithm-login.puml  algorithm-portal-sync.puml  algorithm-register-user.puml  decomposition-level0.puml  decomposition-level1.puml  flowchart-approve-document.puml  flowchart-authentication.puml  flowchart-create-document.puml  flowchart-sign-document.puml  flowchart-synchronization.puml
server/: .env.example  .gitignore  RAILWAY_DEPLOY.md  RAILWAY_QUICK_START.md  README.md  migrate.js  package.json  server.js
src/: main.cpp
src/app/: AppController.cpp  AppController.h
src/auth/: AuthController.cpp  AuthController.h
src/domain/: AcademicTypes.h  DocumentTypes.h
src/portal/: NovsuHtmlParser.cpp  NovsuHtmlParser.h  PortalImportService.cpp  PortalImportService.h  PortalSessionStore.cpp  PortalSessionStore.h  PortalTypes.cpp  PortalTypes.h
src/security/: EncryptionService.cpp  EncryptionService.h  KeyManager.cpp  KeyManager.h  SignatureProvider.cpp  SignatureProvider.h
src/services/: DocumentService.cpp  DocumentService.h
src/storage/: AcademicRepository.cpp  AcademicRepository.h  EncryptedFileStorage.cpp  EncryptedFileStorage.h  SqliteDocumentRepository.cpp  SqliteDocumentRepository.h
src/sync/: RemoteSyncGateway.cpp  RemoteSyncGateway.h  SqliteSyncQueue.cpp  SqliteSyncQueue.h  SyncEngine.cpp  SyncEngine.h  SyncTypes.h
src/ui/model/: DisciplineListModel.cpp  DisciplineListModel.h  DocumentListModel.cpp  DocumentListModel.h  GradeSheetListModel.cpp  GradeSheetListModel.h  GroupListModel.cpp  GroupListModel.h  StudentListModel.cpp  StudentListModel.h
src/ui/qml/: App.qml  ApprovalPage.qml  DisciplinesPage.qml  GradeSheetPage.qml  GroupPage.qml  GroupsPage.qml  LoginPage.qml  Main.qml
tests/: CMakeLists.txt  TestAcademicRepository.cpp  TestAuthentication.cpp  TestEncryption.cpp  TestHtmlParser.cpp  TestRepository.cpp  TestSyncQueue.cpp
